--- a/Calculator/CalculatorLib/CalculatorLib.vcxproj.filters
+++ b/Calculator/CalculatorLib/CalculatorLib.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="Commands.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Async.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CalculatorLib.cpp">
@@ -54,6 +57,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Interfaces.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Async.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
